Fix header height on mobile devices

--- a/app/static/src/sass/layout/_header.scss
+++ b/app/static/src/sass/layout/_header.scss
@@ -12,6 +12,7 @@ $module: ".header";
         left: 0;
         z-index: 100;
         height: $header-height-tablet;
+        overflow: hidden;
         @include mq($until: xs) {
             height: $header-height-mobile;
         }
